--- a/public/test.html
+++ b/public/test.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Test</h1>
 <p>
-Welcome to the test website of <span>state your name</span>.
+Welcome to the test website of <span>Adam Tarnowski</span>.
 </p>
 </body>
 
