--- a/public/test.html
+++ b/public/test.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <title>DMS 321</title>
 </head>
 
 <body>
-<h1>Test</h1>
 <p>
-Welcome to the test website of <span>state your name</span>.
+Hello, world!  This is just a plain HTML file!
 </p>
 </body>
 
