--- a/public/ajax3.html
+++ b/public/ajax3.html
@@ -17,7 +17,7 @@ async function sendInfo(event)
     let playername = $('#playername').value;
     let playerscore = $('#playerscore').value;
     let bodydata = { name: playername, value: playerscore };
-    fetch(`/ajax/saveinfo`, { method:'POST', headers: { 'Content-Type': 'application/x-www-form-urlencoded' }, body: new URLSearchParams(bodydata) }).then(sendInfoFinished);;
+    fetch(`/ajax/saveinfo`, { method:'POST', headers: { 'Content-Type': 'application/x-www-form-urlencoded' }, body: new URLSearchParams(bodydata) }).then(sendInfoFinished);
     }
 
 function sendInfoFinished()
